error/20200004/27_error.txt
/home/kps/git_ssu_score/STD_DIR/20200004/27.c: In function ‘main’:
/home/kps/git_ssu_score/STD_DIR/20200004/27.c:14:26: error: ‘ssu_signal_handler’ undeclared (first use in this function)
     sig_act.sa_handler = ssu_signal_handler;
                          ^~~~~~~~~~~~~~~~~~
/home/kps/git_ssu_score/STD_DIR/20200004/27.c:14:26: note: each undeclared identifier is reported only once for each function it appears in
